@@ -29,7 +29,6 @@ enum ENodeRegistration
 	ENR_PER_MESH_BUFFER
 };
 
-
 //! A scene node displaying a static mesh
 class IMeshSceneNode : public ISceneNode
 {
@@ -47,8 +46,15 @@ public:
 	{}
 
 	//! Sets a new mesh to display or update mesh when it changed
-	/** \param mesh Mesh to display. */
-	virtual void setMesh(IMesh* mesh) = 0;
+	/** \param mesh Mesh to display. 
+	\param copyMeshMaterials Copy the mesh materials to the node when true.
+	When false don't touch existing node materials. Note that setting
+	this to false is risky when the number of meshbuffers and 
+	already existing node materials isn't identical. Only set 
+	to false when you are certain you need this. 
+	Also it seems materials are currently never serialized, so if you 
+	ever deserialize the node it will copy the materials again.	*/
+	virtual void setMesh(IMesh* mesh, bool copyMeshMaterials=true) = 0;
 
 	//! Get the currently defined mesh for display.
 	/** \return Pointer to mesh which is displayed by this node. */
