@@ -56,7 +56,7 @@ namespace scene
 		virtual ISceneNode* clone(ISceneNode* newParent=0, ISceneManager* newManager=0) IRR_OVERRIDE;
 
 		//! The mesh cannot be changed
-		virtual void setMesh(IMesh* mesh) IRR_OVERRIDE {}
+		virtual void setMesh(IMesh* mesh, bool copyMeshMaterials) IRR_OVERRIDE {}
 
 		//! Returns the current mesh
 		virtual IMesh* getMesh() IRR_OVERRIDE { return Mesh; }
